# ssukka

./: .dockerignore  .editorconfig  .gitignore  .shellcheckrc  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
assets/honeypot/: classnames.txt  content-classes.txt  prose-adjectives.txt  prose-connectors.txt  prose-verbs.txt
benches/: obfuscation.rs
docs/: CHANGELOG.md
src/: analysis.rs  config.rs  css.rs  honeypot.rs  inline.rs  js.rs  js_ast.rs  lib.rs  main.rs  obfuscator.rs  structural.rs  symbol_map.rs  transform.rs  wasm.rs  watermark.rs  wordlist.rs
src/html/: entities.rs  tags.rs  whitespace.rs
ssukka/: Cargo.toml
ssukka-proxy/: Cargo.toml
ssukka-proxy/src/: main.rs
ssukka/src/: lib.rs  main.rs
ssukka_core/: Cargo.toml
ssukka_core/assets/honeypot/: paths.txt  prose-nouns.txt
ssukka_core/benches/: obfuscation.rs
ssukka_core/src/: ai_opt_out.rs  analysis.rs  config.rs  css.rs  error.rs  honeypot.rs  html.rs  js.rs  js_ast.rs  lib.rs  obfuscator.rs  structural.rs  transform.rs  word_split.rs
ssukka_core/src/html/: entities.rs  whitespace.rs
ssukka_core/tests/: efficacy.rs  extraction.rs  integration.rs  obsmith.rs
ssukka_wasm/: Cargo.toml
ssukka_wasm/src/: bindings.rs  lib.rs
tests/: efficacy.rs  extraction.rs  integration.rs  obsmith.rs
tools/: deploy.sh  format.sh  lint.sh
wasm/: Cargo.toml
wasm/src/: lib.rs
