[workspace]
resolver = "2"
members = ["ssukka_core", "ssukka", "ssukka-proxy", "wasm"]
# wasm is built only for the wasm32 target (wasm-pack / -p ssukka_wasm), so a
# plain host `cargo build`/`test` skips it.
default-members = ["ssukka_core", "ssukka", "ssukka-proxy"]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.94"
license = "MIT"
authors = ["Han Damin <miniex@daminstudio.net>"]
repository = "https://github.com/miniex/ssukka"

[workspace.dependencies]
ssukka_core = { path = "ssukka_core", version = "0.3.0" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
uninlined_format_args = "warn"
