[package]
name = "ssukka-proxy"
description = "Serve-time HTML obfuscation reverse proxy for ssukka (skeleton)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "ssukka-proxy"
path = "src/main.rs"

[lints]
workspace = true
