[package]
name = "ssukka-proxy"
description = "Serve-time HTML obfuscation reverse proxy for ssukka."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["html", "obfuscation", "proxy"]
categories = ["web-programming", "command-line-utilities"]

[[bin]]
name = "ssukka-proxy"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
bytes = "1.12.0"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1.20", features = [
  "tokio",
  "server",
  "server-auto",
  "http1",
  "client",
  "client-legacy",
] }
ssukka_core = { version = "0.3.0", path = "../ssukka_core" }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "macros"] }
